--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>goit-markup-hw-01</title>
+    <title>WebStudio</title>
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html">WebStudio
+            <a href="./index.html">WebStudio
             </a>
             <ul>
                 <li><a href="">Студия</a></li>
@@ -21,11 +21,83 @@
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
-    <div>
+    <main>
+        <!-- слоган -->
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <a href="">Заказать услугу</a>
+            <a href="#">Заказать услугу</a>
         </section>
-    </div>
+        <!-- h2 особенности -->
+        <section>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <!-- чем мы занимаемся -->
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="./images/doing-img1.jpg" alt="Печать на клавиатуре" width="370"></li>
+                <li><img src="./images/doing-img2.jpg" alt="Смартфон подключают к ноутбуку" width="370"></li>
+                <li><img src="./images/doing-img3.jpg" alt="Палитра выбора цветов на экране планшета" width="370"></li>
+            </ul>
+        </section>
+        <!-- наша команда -->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/team-img-1.jpg" alt="Игорь Демьяненко" width="270">
+                    <p>Игорь Демьяненко</p>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/team-img-2.jpg" alt="Ольга Репина" width="270">
+                    <p>Ольга Репина</p>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/team-img-3.jpg" alt="Николай Тарасов" width="270">
+                    <p>Николай Тарасов</p>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/team-img-4.jpg" alt="Михаил Ермаков" width="270">
+                    <p>Михаил Ермаков</p>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+            <li>
+                <address>г. Киев, пр-т Леси Украинки, 26</address>
+            </li>
+            <li>
+                <address> <a href="mailto:info@example.com">info@example.com</a>
+                </address>
+            </li>
+            <li>
+                <address> <a href="tel:+380991111111">+38 099 111 11 11</a></address>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
